# Dialectic-CLI

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  dialectic  dialectic-skill  pyproject.toml  setup.sh
.claude/skills/: SKILLS.md
docs/: current-implementation-flow.md
docs/dev-docs/: Documentation-Checklist.md  architecture.md  assignment-requirements.md  code-conventions.md  codex-compat.md  validation.md
docs/dev-docs/systems/: ui.md  (+7 more)
docs/runtime-docs/: protocol.md
outline/: 01-harness-layers.md  02-communication.md  03-ux.md  04-requirements-and-modes.md  05-timeline.md  README.md
plan/015-trigger-race-fix/: 00-summary.md  01-plan.md  phase-d-cleanup-cascade.md
src/: __init__.py  bus.py  cli.py  dev_skill_cli.py  env_check.py  logs.py  orchestrator.py  patch_apply.py  schema.py  ui.py
src/agents/: __init__.py  base.py  claude.py  codex.py
tasks/implement-dijkstra/: task.md
tests/: test_bus_append.py  test_cli_interactive_modes.py  test_cli_menu.py  test_cwd_isolation.py  test_cwd_isolation_integration.py  test_dev_skill_cli.py  test_env_check_parallel.py  test_implement_spec.py  test_interactive_menu_expansion.py  test_listener_race_pty.py  test_logs.py  test_orchestrator_converge.py  test_orchestrator_decision_wiring.py  test_orchestrator_patch_integration.py  test_orchestrator_spinner.py  test_patch_apply.py  test_patch_apply_new_file.py  test_prompt_end_or_iterate.py  test_schema.py  test_schema_kind_table.py  test_spec_autosave.py  test_trigger_listener.py  test_ui.py  test_ui_print_message.py  test_workdir_default.py
tools/: repro_listener.py
(+103 files in other folders)
