[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dialectic-cli"
version = "0.1.0"
description = "Cross-vendor multi-agent collaboration through dialectic (thesis ↔ antithesis ↔ synthesis)"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Shin Jaewook", email = "sjw4929@gmail.com" },
]
# 외부 의존성 0 (docs/dev-docs/code-conventions.md §2)
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
dialectic = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
